[project]
name = "api-la"
version = "0.1.0"
description = ""
authors = [
    {name = "liblanc",email = "yeahh289@gmail.com"}
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.43.0,<0.44.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "shell (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.taskipy.tasks]
run = "uvicorn src.main:app --reload"